# chemotools

./: .gitignore  .lefthook.yml  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yml  cliff.toml  lefthook.yml  noxfile.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: blank-issue.md  bug_report.md  documentation-improvement.md  feature_request.md
.github/workflows/: changelog.yml  ci.yml  documentation.yml  python-release.yml
chemotools/: _axis_mixin.py  _deprecation.py  _doc_mixin.py  _optional.py  _types.py  _validation.py
chemotools/adaptation/: __init__.py  _direct_standardization.py  _piecewise_direct_standardization.py  _x_axis_interpolator.py
chemotools/augmentation/: __init__.py  _add_noise.py  _baseline_shift.py  _fractional_shift.py  _gaussian_broadening.py  _index_shift.py  _spectrum_scale.py
chemotools/baseline/: __init__.py  _air_pls.py  _ar_pls.py  _as_ls.py  _base.py  _constant_baseline_correction.py  _cubic_spline_correction.py  _linear_correction.py  _non_negative.py  _polynomial_correction.py  _rubberband_correction  _rubberband_correction.py  _subtract_reference.py
chemotools/cross_decomposition/: __init__.py  _external_parameter_orthogonalization.py  _orthogonal_signal_correction.py  _pls_regression.py
chemotools/datasets/: __init__.py  _base.py
chemotools/derivative/: _norris_william.py  _savitzky_golay.py
chemotools/feature_selection/: _base.py  _index_selector.py  _range_cut.py  _sr_selector.py  _vip_selector.py
chemotools/inspector/: __init__.py  _pca_inspector.py  _pls_regression_inspector.py  _preprocessing_inspector.py
chemotools/models/: __init__.py  _cross_decomposition.py
chemotools/outliers/: __init__.py  _base.py  _dmodx.py  _hotelling_t2.py  _leverage.py  _q_residuals.py  _studentized_residuals.py  _utils.py
chemotools/physics/: __init__.py  _intensity_conversion.py
chemotools/plotting/: __init__.py  _base.py  _distances.py  _explained_variance.py  (+10 more)
docs/: fix_translated_buttons.py  inspector_architecture.md  inspector_improvements.md
tests/: conftest.py  test_optional_dependencies.py  test_outliers.py  test_selectors.py
(+204 files in other folders)
