[project]
name = "chemotools"
dynamic = ["version"]
description = "chemotools: A Python Package that Integrates Chemometrics and scikit-learn"
authors = [{ name = "Pau Cabaneros" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
readme = "README.md"
license = "MIT"
dependencies = [
    # numpy < 3 is risky if ecosystem hasn't caught up, but good for future-proofing
    "numpy>=2.0.0,<3", 
    "scikit-learn>=1.6.0,<2",
    "scipy>=1.11.0,<2",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.10.7",
]

[dependency-groups]
dev = [
    "nox",
    "pytest>=8.3.0",
    "pytest-cov>=6.3.0",
    "ruff>=0.10.0",
    "pandas-stubs>=2.2.3.241126,<3",
    "scipy-stubs>=1.15.1.0,<2",
    "typing-extensions>=4.12.0",
    "lefthook>=1.12.4",
    "commitlint>=1.3.1",
    "ty>=0.0.15",
    "typos>=1.44.0",
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-copybutton",
    "nbsphinx",
    "ipykernel",
    "sphinx-design",
    "sphinxcontrib-youtube",
    "sphinx-intl>=2.3.2",
    "beautifulsoup4>=4.12.0",
]
docs-dev = [
    "sphinx-autobuild>=2024.10.3,<2025",
]

[build-system]
# Added hatch-vcs to handle dynamic versioning via build backend
requires = ["hatchling", "hatch-vcs"] 
build-backend = "hatchling.build"

# Configuration for Hatch to read git tags
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "chemotools/_version.py"

[tool.pytest.ini_options]
filterwarnings = "always"

# Recommended Basic Ruff Config
[tool.ruff]
extend-exclude = ["chemotools/_version.py"]

[tool.ruff.format]
exclude = ["chemotools/_version.py"]

[tool.ruff.lint]
select = ["C", "E", "F", "I"] # Defaults + I sort + C complexity 
